--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "@thirdweb-dev/react": "^3.7.3",
+    "@thirdweb-dev/sdk": "^3.7.3",
+    "ethers": "^5.7.2",
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
+    "graphql": "^16.6.0",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.7.0"
