--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "graphql": "^16.6.0",
+    "js-cookie": "^3.0.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
