--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/react": "^3.7.3",
     "@thirdweb-dev/sdk": "^3.7.3",
     "ethers": "^5.7.2",
+    "firebase": "^9.17.1",
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "graphql": "^16.6.0",
@@ -22,7 +23,9 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
+    "slug": "^8.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
