--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_GRAPHQL_URI=http://localhost:4000/graphql
 NEXT_PUBLIC_ETH_ADDRESS=0x7af963cF6D228E564e2A0aA0DdBF06210B38615D
 NEXT_PUBLIC_WETH_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
+NEXT_PUBLIC_MARKETPLACE_ADDRESS=0x188B7D3c151A0B72bC751Efb47F13670d6E2c89a
