--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.7.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slug": "^8.2.2"
   },
