--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-select": "^5.7.0",
+    "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "slug": "^8.2.2"
