done buy sell direct listing

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ NEXT_PUBLIC_WETH_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
 NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xd7DA9400166fCbA720401523099A30545438DF3d
 NEXT_PUBLIC_EHTERSCAN_API_KEY=XKQ4QQF289QASHIW3Y2E7AGS6YDIV3HMNW
 NEXT_PUBLIC_ETHERSCAN_LINK=https://goerli.etherscan.io/tx/
+NEXT_PUBLIC_MARKETPLACE_SHARE=2.5
+
+
+marketgoerli=0xd7DA9400166fCbA720401523099A30545438DF3d
+ethaddress=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
+wethaddres=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
