--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@thirdweb-dev/react": "^3.10.3",
     "@thirdweb-dev/sdk": "^3.10.3",
     "@wojtekmaj/react-datetimerange-picker": "^4.2.0",
+    "big-number": "^2.0.0",
+    "decimal.js": "^10.4.3",
     "ethers": "^5.7.2",
     "firebase": "^9.17.1",
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "graphql": "^16.6.0",
     "js-cookie": "^3.0.1",
+    "mathjs": "^11.8.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
