--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "graphql": "^16.6.0",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.1",
     "mathjs": "^11.8.0",
     "next": "12.2.0",
