before fix getbestbid

--- a/.env
+++ b/.env
@@ -5,6 +5,10 @@ NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xd7DA9400166fCbA720401523099A30545438DF3d
 NEXT_PUBLIC_EHTERSCAN_API_KEY=XKQ4QQF289QASHIW3Y2E7AGS6YDIV3HMNW
 NEXT_PUBLIC_ETHERSCAN_LINK=https://goerli.etherscan.io/tx/
 NEXT_PUBLIC_MARKETPLACE_SHARE=2.5
+# * 100 (%)
+NEXT_PUBLIC_BID_BUFFER=5
+# in seconds
+NEXT_PUBLIC_TIME_BUFFER=600
 
 
 marketgoerli=0xd7DA9400166fCbA720401523099A30545438DF3d
