--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ NEXT_PUBLIC_ETHERSCAN_LINK=https://goerli.etherscan.io/tx/
 NEXT_PUBLIC_MARKETPLACE_SHARE=2.5
 # * 100 (%)
 NEXT_PUBLIC_BID_BUFFER=5
-# in seconds
-NEXT_PUBLIC_TIME_BUFFER=600
+# in seconds 60*10 = 10 minutes
+NEXT_PUBLIC_TIME_BUFFER=60
 
 
 marketgoerli=0xd7DA9400166fCbA720401523099A30545438DF3d
