--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.4.0",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-select": "^5.7.0",
         "react-slideshow-image": "^4.2.1",
         "react-spinners": "^0.13.8",
