--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_GRAPHQL_URI=http://localhost:4000/graphql
+NEXT_PUBLIC_GRAPHQL_URI_DEV=http://localhost:4000/graphql
+NEXT_PUBLIC_GRAPHQL_URI=https://marketplace.quangnn.tech/__api
 NEXT_PUBLIC_ETH_ADDRESS=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
 NEXT_PUBLIC_WETH_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
 NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xd7DA9400166fCbA720401523099A30545438DF3d
@@ -9,7 +10,7 @@ NEXT_PUBLIC_MARKETPLACE_SHARE=2.5
 NEXT_PUBLIC_BID_BUFFER=5
 # in seconds 60*10 = 10 minutes
 NEXT_PUBLIC_TIME_BUFFER=60
-
+NEXT_PUBLIC_ENV=production
 
 marketgoerli=0xd7DA9400166fCbA720401523099A30545438DF3d
 ethaddress=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
