change chain to sepolia + fix auto change chain

--- a/.env
+++ b/.env
@@ -1,17 +1,19 @@
 NEXT_PUBLIC_GRAPHQL_URI_DEV=http://localhost:4000/graphql
 NEXT_PUBLIC_GRAPHQL_URI=https://marketplace.quangnn.tech/__api
 NEXT_PUBLIC_ETH_ADDRESS=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
-NEXT_PUBLIC_WETH_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
-NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xd7DA9400166fCbA720401523099A30545438DF3d
-NEXT_PUBLIC_EHTERSCAN_API_KEY=XKQ4QQF289QASHIW3Y2E7AGS6YDIV3HMNW
-NEXT_PUBLIC_ETHERSCAN_LINK=https://goerli.etherscan.io/tx/
+NEXT_PUBLIC_WETH_ADDRESS=0xee44150250AfF3E6aC25539765F056EDb7F85D7B
+NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xc5e90B10d179E7e0d4b5b0F551673A30C16E2001
+NEXT_PUBLIC_ETHERSCAN_LINK=https://sepolia.etherscan.io
 NEXT_PUBLIC_MARKETPLACE_SHARE=2.5
+NEXT_PUBLIC_CHAIN_ID=11155111
 # * 100 (%)
 NEXT_PUBLIC_BID_BUFFER=5
 # in seconds 60*10 = 10 minutes
 NEXT_PUBLIC_TIME_BUFFER=60
 NEXT_PUBLIC_ENV=production
 
-marketgoerli=0xd7DA9400166fCbA720401523099A30545438DF3d
-ethaddress=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
-wethaddres=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
+#Sepolia
+#NEXT_PUBLIC_ETH_ADDRESS=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
+#NEXT_PUBLIC_WETH_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
+#NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xd7DA9400166fCbA720401523099A30545438DF3d
+#NEXT_PUBLIC_EHTERSCAN_API_KEY=XKQ4QQF289QASHIW3Y2E7AGS6YDIV3HMNW
