--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_GRAPHQL_URI_DEV=http://localhost:4000/graphql
-NEXT_PUBLIC_GRAPHQL_URI=https://opensea-be.onrender.com/__api
+NEXT_PUBLIC_GRAPHQL_URI=https://opensea-be.onrender.com/graphql
 NEXT_PUBLIC_ETH_ADDRESS=0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE
 NEXT_PUBLIC_WETH_ADDRESS=0xee44150250AfF3E6aC25539765F056EDb7F85D7B
 NEXT_PUBLIC_MARKETPLACE_ADDRESS=0xc5e90B10d179E7e0d4b5b0F551673A30C16E2001
